# homework

./: README.md  pyproject.toml  work.py
src/: 14.1_main.py  14.2_main.py  15.1_main.py  16.1_main.py  work.py
tests/: test_work.py
